--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,1 +1,39 @@
-html,body{margin:0;padding:0;height:100%;width:100%;overflow:hidden;background:#f5f5f5}#bms{position:relative}.note{z-index:9999;position:absolute;height:10px}.note-white{background:#fff;width:20px;border:solid 1px #ccc}.note-black{background:#34495e;width:20px;border:solid 1px #34495e}.note-turntable{background:#c0392b;width:40px}#decision-line{position:absolute;top:500px;left:300px;width:260px;height:12px;background:#e74c3c}
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background: #f5f5f5;
+}
+#bms {
+  position: relative;
+}
+.note {
+  z-index: 9999;
+  position: absolute;
+  height: 10px;
+}
+.note-white {
+  background: #fff;
+  width: 20px;
+  border: solid 1px #ccc;
+}
+.note-black {
+  background: #34495e;
+  width: 20px;
+  border: solid 1px #34495e;
+}
+.note-turntable {
+  background: #c0392b;
+  width: 40px;
+}
+#decision-line {
+  position: absolute;
+  top: 500px;
+  left: 300px;
+  width: 260px;
+  height: 12px;
+  background: #e74c3c;
+}
