--- a/styl/main.styl
+++ b/styl/main.styl
@@ -1,3 +1,6 @@
+@import 'base'
+@import url(https://fonts.googleapis.com/css?family=Play);
+
 vendor(prop, args)
   -webkit-{prop} args
   -moz-{prop} args
@@ -10,9 +13,13 @@ html, body
   width 100%
   overflow hidden
   background #f5f5f5
+  font-family 'Play', sans-serif
 
 #bms
   position relative
+  width 800px
+  height 100%
+  margin 0 auto
 
 .note
   z-index 9999
@@ -40,3 +47,36 @@ html, body
   width 260px
   height 12px
   background #E74C3C
+
+#bpm
+  position absolute
+  top 30px
+  font-family 'Play', sans-serif
+  font-size 24px
+  color #BDC3C7
+
+.key
+  height 36px
+  width 24px
+  border-radius 2px
+  position absolute
+
+.key-turntable
+  height 48px
+  width 48px
+  border-radius 50%
+  position absolute
+
+for id in 0 ... 8
+  .key-id{id}
+    left : id  * 30px + 300px
+    if id % 2 is 0
+      top 540px
+      background #FFF
+      border-top 1px solid #D5D5D5
+      box-shadow 0 0 25px #E8E8E8 inset, 0 1px 0 #C3C3C3, 0 2px 0 #C9C9C9, 0 2px 3px #333333
+    else
+      top 520px
+      background #222
+      border-top 1px solid #222222
+      box-shadow 0 0 25px #333333 inset, 0 1px 0 #000000, 0 2px 0 #222222, 0 2px 3px #333333
