--- a/styl/main.styl
+++ b/styl/main.styl
@@ -28,7 +28,9 @@ html, body
 .note-white
   background #fff
   width 20px
-  border solid 1px #ccc
+  height 10px
+  background #34495E
+  position absolute
 
 .note-black
   background #34495E
