fix border style

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -23,7 +23,7 @@ body {
 .note-white {
   background: #fff;
   width: 20px;
-  border: solid 1px #ccc;
+  border: solid 1px #333;
 }
 .note-black {
   background: #34495e;
