--- a/styl/main.styl
+++ b/styl/main.styl
@@ -28,7 +28,7 @@ html, body
 .note-white
   background #fff
   width 20px
-  border solid 1px #ccc
+  border solid 1px #333
 
 .note-black
   background #34495E
