--- a/styl/main.styl
+++ b/styl/main.styl
@@ -73,9 +73,9 @@ for id in 0 ... 8
       top 540px
       background #FFF
       border-top 1px solid #D5D5D5
-      //box-shadow 0 0 25px #E8E8E8 inset, 0 1px 0 #C3C3C3, 0 2px 0 #C9C9C9, 0 2px 3px #333333
+      box-shadow 0 0 25px #E8E8E8 inset, 0 1px 0 #C3C3C3, 0 2px 0 #C9C9C9, 0 2px 3px #333333
     else
       top 520px
       background #222
       border-top 1px solid #222222
-      //box-shadow 0 0 25px #333333 inset, 0 1px 0 #000000, 0 2px 0 #222222, 0 2px 3px #333333
+      box-shadow 0 0 25px #333333 inset, 0 1px 0 #000000, 0 2px 0 #222222, 0 2px 3px #333333
