--- a/styl/main.styl
+++ b/styl/main.styl
@@ -54,6 +54,15 @@ html, body
   font-size 24px
   color #BDC3C7
 
+.judge
+  position absolute
+  width 200px
+  height 20px
+  left 380px
+  top 420px
+  font-size 42px
+  color #16A085
+  
 .key
   height 36px
   width 24px
