--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -49,6 +49,15 @@ body {
   font-size: 24px;
   color: #bdc3c7;
 }
+.judge {
+  position: absolute;
+  width: 200px;
+  height: 20px;
+  left: 380px;
+  top: 420px;
+  font-size: 42px;
+  color: #16a085;
+}
 .key {
   height: 36px;
   width: 24px;
