--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -23,7 +23,7 @@ body {
 .note-white {
   background: #fff;
   width: 20px;
-  border: solid 1px #ccc;
+  border: solid 1px #333;
 }
 .note-black {
   background: #34495e;
@@ -48,6 +48,16 @@ body {
   font-family: 'Play', sans-serif;
   font-size: 24px;
   color: #bdc3c7;
+}
+.judge {
+  position: absolute;
+  width: 200px;
+  height: 20px;
+  left: 380px;
+  top: 420px;
+  font-size: 42px;
+  color: #34495e;
+  z-index: 9999;
 }
 .key {
   height: 36px;
