--- a/styl/main.styl
+++ b/styl/main.styl
@@ -18,7 +18,6 @@ html, body
   position relative
   width 800px
   height 100%
-  margin 0 auto
 
 .note
   z-index 9999
@@ -42,7 +41,7 @@ html, body
 #decision-line
   position absolute
   top 500px
-  left 300px
+  //left 300px
   width 260px
   height 12px
   background #E74C3C
@@ -78,7 +77,7 @@ html, body
 
 for id in 0 ... 8
   .key-id{id}
-    left : id  * 30px + 300px
+    left : id  * 30px // + 300px
     if id % 2 is 0
       top 540px
       background #FFF
