--- a/styl/main.styl
+++ b/styl/main.styl
@@ -14,10 +14,10 @@ html, body
   background #f5f5f5
   font-family 'Play', sans-serif
 
-#bms
-  position relative
-  width 800px
-  height 100%
+//#bms
+//  position relative
+//  width 800px
+//  height 100%
 
 .note
   z-index 9999
