--- a/styl/main.styl
+++ b/styl/main.styl
@@ -94,11 +94,11 @@ for id in 0 ... 8
   background-size cover
   box-shadow none
   border none
-  -webkit-animation spin 1.5s linear infinite
-  -moz-animation spin 1.5s linear infinite
-  -ms-animation spin 1.5s linear infinite
-  -o-animation spin 1.5s linear infinite
-  animation spin 1.5s linear infinite
+
+  //-moz-animation spin 1.5s linear infinite
+  //-ms-animation spin 1.5s linear infinite
+  //-o-animation spin 1.5s linear infinite
+  //animation spin 1.5s linear infinite
 
 @-webkit-keyframes spin 
   0% {-webkit-transform: rotate(0deg);}
@@ -110,4 +110,4 @@ for id in 0 ... 8
 
 @keyframes spin
   0% {transform: rotate(0deg);}
-  100% {transform: rotate(360deg);}
+  100% {transformd: rotate(360deg);}
