--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -123,11 +123,6 @@ body {
   background-size: cover;
   box-shadow: none;
   border: none;
-  -webkit-animation: spin 1.5s linear infinite;
-  -moz-animation: spin 1.5s linear infinite;
-  -ms-animation: spin 1.5s linear infinite;
-  -o-animation: spin 1.5s linear infinite;
-  animation: spin 1.5s linear infinite;
 }
 @-webkit-keyframes spin {
   0% {
@@ -150,7 +145,7 @@ body {
     transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
+    transformd: rotate(360deg);
   }
 }
 @-webkit-keyframes spin {
@@ -158,7 +153,7 @@ body {
     transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
+    transformd: rotate(360deg);
   }
 }
 @-o-keyframes spin {
@@ -166,7 +161,7 @@ body {
     transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
+    transformd: rotate(360deg);
   }
 }
 @keyframes spin {
@@ -174,6 +169,6 @@ body {
     transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
+    transformd: rotate(360deg);
   }
 }
